fix(docs): table overflow-x added

--- a/docs/src/components/markdown.module.css
+++ b/docs/src/components/markdown.module.css
@@ -104,7 +104,7 @@
 }
 
 .markdown > table {
-  @apply mb-6 w-full text-gray-700 text-sm;
+  @apply mb-6 w-full text-gray-700 text-sm block overflow-x-auto;
 }
 
 .markdown > table > thead > tr {
